--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,8 +9,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 # install nodejs
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
 RUN apt-get install -y nodejs
-# TODO: remove if not useful
-# temporary to hide new-npm-version notification from CLI
-# RUN npm install -g npm@7.14.0
+
+# hide "new version of npm available" notification from CLI
+RUN npm config set update-notifier false
 
 ENV USER=root
