--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,41 +1,5 @@
 {
-  "C_Cpp.clang_format_style": "Google",
   "editor.formatOnSave": true,
-  "clang-tidy.checks": [
-    "*",
-    // deactivate controversial rules:
-    // it doesn't allow to override operator==, etc.
-    "-fuchsia-*",
-    // it needs long header guard instead of simple '#pragma once'
-    "-llvm-header-guard",
-    // closing comments for namespaces seems unnecessary in case there's no 
-    // nested namespaces
-    "-google-readability-namespace-comments",
-    "-llvm-namespace-comment",
-    // it prevents creating struct with constructor and public fields,
-    // as it requires to hide fields under private and expose them through
-    // getter/setter methods, which is too much for struct which actually
-    // doesn't need incapsulation
-    "-misc-non-private-member-variables-in-classes",
-    // it forces to define all special member function for class
-    // (copy/move, ctr/assignment, destr), when you have only one of those,
-    // which looks unnecessary when you need custom destructor only
-    "-cppcoreguidelines-special-member-functions",
-    "-hicpp-special-member-functions",
-    // it prevents using macro funcs, I need it for learning macros
-    "-cppcoreguidelines-macro-usage",
-    // it prevents casts, I need it to work with raw memory
-    "-cppcoreguidelines-pro-type-reinterpret-cast",
-    "-cppcoreguidelines-pro-type-const-cast",
-    // it prevents work with raw memory directly
-    "-cppcoreguidelines-owning-memory",
-    // it prevents bitwise AND-operator on signed integers, while those are
-    // defined in third party headers (opengl), so I can't change their types.
-    // and I don't want to static_cast them either
-    "-hicpp-signed-bitwise",
-    // it's a duplicate of 'readability-magic-numbers' rule
-    "-cppcoreguidelines-avoid-magic-numbers",
-  ],
   "clang-tidy.lintOnSave": true,
   "clang-tidy.fixOnSave": false,
   "clang-tidy.compilerArgs": [
@@ -43,7 +7,9 @@
     "--include-directory=/emsdk/upstream/emscripten/system/include"
   ],
   "files.associations": {
-    "*.glsl": "c",
+    "*.glsl": "glsl",
+    ".clang-format": "yaml",
+    ".clang-tidy": "yaml",
     "system_error": "cpp",
     "ostream": "cpp",
     "string": "cpp",
@@ -110,6 +76,7 @@
     "cinttypes": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "set": "cpp"
   }
 }
