enable c++ compiler optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 3.16.3)
 
 project(Snake3D)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -g")
+# clang options:
+# - use latest version of language standard
+# - enable most optimizations
+# - generate debug info (eg. func names printed in WAT)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -O2 -g")
 
 set(MAIN_SOURCE_DIR "src")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
